<resources>
    <string name="app_name">Jacket_Tracker</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_add">Add Jacket</string>
    <string name="title_statistics">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up_here">Sing Up here</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="citizenship_card">Citizenship Card</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_back_admin">Welcome Back Admin!</string>
    <string name="id">ID:</string>
    <string name="sing_out">Sing Out</string>
    <string name="type_jacket">Type Jacket:</string>
    <string name="quantity">Quantity:</string>
    <string name="cost">Cost:</string>
    <string name="date">Date:</string>
    <string name="add_jacket">Add Jacket</string>
</resources>