<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jacket_tracker.ui.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.jacket_tracker.ui.view.inventory.InventoryHistory"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.jacket_tracker.ui.view.addJacket.Add_Menu"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add__menu" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.jacket_tracker.ui.view.statistics.Statistics_view"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics_view" />
</navigation>