<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.addJacket.ExistentType_Add_Menu">

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/ExistentType_LayoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_jacket"
                android:textSize="20sp"/>

            <Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/ExistentType_Spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/ExistentType_Quantity_Et"
                android:layout_width="200dp"
                android:gravity="center"
                android:hint="####"
                android:layout_height="50dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/cost"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/ExistentType_Cost_Et"
                android:layout_width="200dp"
                android:gravity="center"
                android:hint="$$$$"
                android:layout_height="50dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/ExistentType_Date_Et"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="Choose a date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Button_Color"
                android:textColor="@color/white"
                android:text="@string/add_jacket"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>