<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.home.HomeFragment">

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_weight="1"
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/welcome_back_admin"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:background="@drawable/avatar"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="10sp"
                android:textSize="20sp"
                android:text="@string/id"/>
            <TextView
                android:id="@+id/idHome_edt"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:id="@+id/firstnameHome_edt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/lastnameHome_edt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="20sp"/>

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/Button_Color"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:text="@string/sing_out"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>