<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RegisterActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="0.9"
                app:srcCompat="@drawable/jacket_traker_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="Sing Up"
                android:textSize="30sp" />

        </LinearLayout>

        <ScrollView
            android:paddingTop="20dp"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5">

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"/>

                    <EditText
                        android:id="@+id/firstname_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/InventoryTitles_Color"
                        android:hint="Ej: Juan"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"/>

                    <EditText
                        android:id="@+id/lastname_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColorHint="@color/InventoryTitles_Color"
                        android:textColor="@color/black"
                        android:hint="Ej: Valdéz"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/citizenship_card"/>

                    <EditText
                        android:id="@+id/id_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.4"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/InventoryTitles_Color"
                        android:hint="12638123"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"/>

                    <EditText
                        android:id="@+id/passwordRegister_edt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.4"
                        android:textColor="@color/black"
                        android:textColorHint="@color/InventoryTitles_Color"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="******"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.4"
                        android:textColor="@color/black"
                        android:textColorHint="@color/InventoryTitles_Color"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="juanvalez@email.com"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>